ロードに失敗したノードを警告マーク付きで表示するようにした